--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         年龄:<span id="Age">25</span> | 求职意向: Web前端 | 期望薪资:面议
     </header>
     <section>
-        <h2 click="go()">掌握技能</h2>
+        <h2 onclick="go()">掌握技能</h2>
         <hr/>
         <ul class="jineng">
             <li>精通 HTML+CSS 页面布局，熟悉 W3C 标准，并且具有良好的代码书写习惯。</li>
