--- a/index.html
+++ b/index.html
@@ -249,6 +249,6 @@
 </body>
     <script>
     function go(){
-        window.location.href="https://www.baidu.com";
+        window.location.href="one.html";
     }</script>
 </html>
