--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         年龄:<span id="Age">25</span> | 求职意向: Web前端 | 期望薪资:面议
     </header>
     <section>
-        <h2 onclick="go()">掌握技能</h2>
+        <h2>掌握技能</h2>
         <hr/>
         <ul class="jineng">
             <li>精通 HTML+CSS 页面布局，熟悉 W3C 标准，并且具有良好的代码书写习惯。</li>
@@ -241,6 +241,7 @@
             <div>
                 <h4>计算机应⽤技术 ⼤专</h4>
                 <span>郑州</span>
+                <span onclick="go()">点我跳转</span>
             </div>
         </hgroup>
     </section>
