--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </ul>    
     </section>
     <section>
-        <h2>工作经历描述</h2>
+        <h2>工作经历</h2>
         <hr/>
         <hgroup>
             <div class="message">       
