--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 </body>
     <script>
     function go(){
-
-        window.location.href='http://www.hngm.edu.cn/
+//         window.location.href="one.html";
+        window.location.href='http://www.hngm.edu.cn/'
     }</script>
 </html>
