--- a/index.html
+++ b/index.html
@@ -251,6 +251,6 @@
     <script>
     function go(){
 //         window.location.href="one.html";
-        window.location.href='http://www.hngm.edu.cn/'
+        window.location.href='http://www.hngm.edu.cn'
     }</script>
 </html>
