--- a/recovery/index.html
+++ b/recovery/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-ico" href="./recovery/imgs/favicon.png" />
+  <link rel="icon" type="image/x-ico" href="./imgs/favicon.png" />
   <title>源机购</title>
-  <link rel="stylesheet" href="./recovery/index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
