网站信息修改

--- a/one.html
+++ b/one.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-ico" href="./recovery/imgs/favicon.png" />
-  <title>源机购</title>
+  <title>北京废品旧货物质上门拆除高价回收</title>
   <link rel="stylesheet" href="./recovery/index.css">
 </head>
 
@@ -15,58 +15,85 @@
     <div class="banner">
       <div class="left">
         <div class="logoArea">
-          <img class="imgH100" src="./imgs/logo.png" alt="">
+          <!-- <img class="imgH100" src="./recovery/imgs/logo.png" alt=""> -->
+          <img class="imgW100" src="./recovery/imgs/14.png" alt="">
         </div>
         <div class="intr">
           <div class="desc">
-            <img class="imgH100" src="./imgs/desc.png" alt="">
+            <!-- <img class="imgH100" src="./recovery/imgs/desc.png" alt=""> -->
+          <img class="imgW100" src="./recovery/imgs/13.jpg" alt="">
+
           </div>
-          <div class="qrCode" onclick="downApp()">
-            <!-- <img class="img100" src="./imgs/qrCode.png" alt=""> -->
-            <img class="img100" src="./imgs/down.png" alt="">                
-          </div>
+          <!-- <div class="qrCode" onclick="downApp()">
+            <img class="img100" src="./recovery/imgs/down.png" alt="">                
+          </div> -->
         </div>
       </div>
       <div class="right">
-        <img class="imgW100" src="./imgs/img1.png" alt="">
+        <!-- <img class="imgW100" src="./recovery/imgs/img1.png" alt=""> -->
+        <img class="imgW100" src="./recovery/imgs/15.jpeg" style="border-radius: 5%;" alt="">
       </div>
     </div>
     <div class="contentWrapper cc">
       <div id="aboutUs">
         <p class="title">关于我们</p>
         <div>
-          <p class="subTitle">【关于源机购】</p>
-          <p class="desc">源机购是源机购科技（上海）有限公司旗下电子产品消费商城，通过源头直达、官方严选、清仓特惠等多样化服务模式为您提供个性优惠、省心省钱的购物体验。</p>
+          <p class="subTitle">【关于红红火火废品回收】</p>
+          <p class="desc">北京各地区所有室内外废品旧货，上门拆除并高价回收，只要是废品旧货、垃圾、设备，您不需要的废弃物品，我们均可上门拆除并高价回收。专业团队室内外废品旧货拆除</p>
+          <div class="desc">专业回收废品旧货、废旧家用电器回收，废旧金属设备回收，废旧交通工具回收、废旧物资回收回收、废旧设备回收、电线电缆回收、废旧塑料回收、五金废料回收、建筑材料回收、电子废料回收、 稀有金属回收、工程机械设备回收、废旧建筑设备回收、工业设备回收、办公家具回收、宾馆设备回收、厨房设备回收、饭店设备回收、KTV音响设备回收、报废设备回收、办公电器回收、各种制冷/制热设备回收、废纸、废书回收、库存积压物资回收、生活及医疗设备回收、废电缆电线回收。<i onclick="handleUpdateStyle('showMore','expand')" class="pointer colorBlue" style="display:''" id="expand">展开更多</i></div>
+          <div class="desc" id="showMore" style="display:none">专业室内拆除，专业楼板拆除，专业地面拆除，专业瓷砖拆除 ,专业隔断墙拆除 ,假 墙拆除，天花板拆除，窗台拆除，水泥楼梯拆除，专业砖墙拆除，墙体拆除，专业铲墙皮，专业承重墙拆除，水泥梁拆除，承重墙拆除，水泥柱子拆除， 商场地砖地面拆除，工厂车间地面破 碎拆除，房屋拆除，钢结构拆除，液压钳拆除，破碎拆除等。楼板拆力施工，液压钳拆除，柱子拆除 ,水泥梁拆除， 水钻切割拆除，台钻破碎拆除，电镐破碎拆除，风镐拆除，破碎。室内各种墙，隔断，棚顶，墙地砖。<br>废品回收项目：<br>电脑设备回收：电脑、笔记本，台式机（品牌整机），电脑配件（硬盘、显示器、键盘等） 打印机、 复 印机、传真机、电源等，废旧好坏全收。
+            家用电器回收：冰箱、冰柜、保鲜柜、电视、洗衣机、空调、中央空调、饮水机、热水器、小家电、微波炉、音响、功放机等<br>
+            废金属回收：废铜、废铁、废铝、不锈钢、电缆，电线，电机，电瓶，网线，配电柜，大中小型设备，铜，铁，铝等类电器废品。铝合金回收，亮铜回收。钢结构回收，废铜废铝，不锈钢回收<br>
+            厨房设备：不锈纲灶台、操作台、蒸箱，烤箱，案板，蒸饭车，冷藏保鲜柜，橱具、餐桌、餐椅等<br>
+            旧家具、旧家电、旧空调、旧电脑、笔记本、液晶电视、旧家具回收旧家电回收空调电脑回收上门回收各种二手旧货 旧家具回收 旧家电回收.旧空调回收、旧电脑回收.旧音响回收 旧暖气片回收.旧地毯回收.二手旧货.二手设备，二手制冷设备.二手办公设备回收，二手库存积压物资回收
+            回收门窗： 塑钢门窗、铝合金门窗、钢门钢窗、复合门 、木门木窗 、防盗门窗 、玻璃门、感应门、旋转门<br>
+            废纸回收：纸箱子、书纸回收，包装废纸，蜂窝纸，纸卡板，纸护角，白板纸，杂志，白卡纸，纸制品回收，旧瓦楞纸，箱板纸，纸箱回收，淋膜纸，纸袋，商标纸，牛皮纸，标签纸，灰卡纸，黄板纸，羊皮纸。新书，旧书，牛皮纸，书芯，白纸，装订纸边，黄板纸，灰卡，新报纸，旧报纸，新闻纸，铜版纸，口杯纸、利乐包装，书页纸等。
+            二手设备:办公设备，记着设备，库存设备，系统设备，制冷设备，机电设备，机床设备，中央空调设备，音响设备，冷库设备，建筑设备，发电机组等<br>
+            库存积压：废旧钢铁、铝、不锈钢、库存积压物资、各种门窗、各种绡子等等！！<br> 
+            建筑废料：拆迁废料、废旧建筑材料、管扣件、水暖器件及门窗材料，废旧金属等等！！<br> 
+            回收物资:仓库积压废旧金属，废旧机械，废旧电器，废旧电脑，废旧电子产品，废旧建筑材料等等！<br>
+            饭 店设备：机组 冷库 设备 餐桌、火锅桌、餐椅、不锈钢灶、不锈钢水池、不锈钢平台、不锈钢料架、豆浆机、压面机、和面机、各种不锈钢厨具：各种灶台，厨具，餐厅桌椅，毛毯地毯，保险柜，冷藏柜，空调，各种货架，各种灯具，冷库设备等。<br>
+            承接各种拆除拆迁工程：房屋拆除拆迁、工厂拆除拆迁、广告牌拆除拆迁、户外广告牌拆除拆迁、厂房拆除拆迁、铁皮房拆除拆迁等。<br>
+            酒店、商场、宾馆拆除工程：<br>
+            室内结构包括（拆吊顶、拆电缆电线、拆通风系统、拆隔间、拆地板、砸墙、砸地平,室外结构包括：拆广告牌、拆霓虹灯、拆铝合金门窗）等。<br>
+            承接各类垃圾清理清运工程：建筑垃圾清理清运、装修垃圾清理清运、装潢垃圾清理清运、工厂垃圾清理清运、学校垃圾清理清运等。<br>
+            废品回收对象：面向酒店、商场、宾馆、工厂、码头、学校、公司、银行、机场，海关、网吧、机关、学校、医院、超市、娱乐场所、建筑工地及家庭等回收一切废品旧货及利用物资。<br>
+            <div class="desc fz7">北京丰台区·朝阳区上门回收废品  无论多少 废品 一个电话 我们快速上门 价格保你满意 <br> 全城最高价 高价回收 高价回收 你只需一个电话 剩下的交给我们 方便快捷 李师傅现金支付 现金支付 现金支付李师傅13522646842本公司回收一切废品 本公司回收一切废品  本公司回收一切废品  本公司回收一切废品 专业人士上门室内废品拆除</div><i onclick="handleUpdateStyle('expand','showMore')" class="pointer colorBlue">收起</i></div>
         </div>
+        
         <div>
-          <p class="subTitle">【物美价廉的购物体验】</p>
+          <p class="subTitle">【联系我们】</p>
           <p class="desc">
-            1、源头直达：源机购科技通力打造的优质货源为您呈现精彩体验。<br />
-            2、官方严选：每一款产品都经过源机购科技精心挑选与测试，保证您的每一次购物体验。<br />
-            3、清仓特惠：大牌折扣，让您用更少的花费享受到大牌尖货的魅力。<br />
+           联系人：李师傅<br/>
+           电话：<a href="tel:13522646842">135-2264-6842</a><a href="tel:13522646842" style="margin-left: 10px;">一键拨号</a><br />
+           微信：15736748326
           </p>
         </div>
         <div class="imgArea">
           <div>
-            <img src="./imgs/page2_img1.png" alt="">
+            <!-- <img src="./recovery/imgs/page2_img1.png" alt=""> -->
+            <img src="./recovery/imgs/8.jpg" alt="">
           </div>
           <div>
-            <img src="./imgs/page2_img2.png" alt="">
+            <!-- <img src="./recovery/imgs/page2_img2.png" alt=""> -->
+            <img src="./recovery/imgs/9.jpg" alt="">
           </div>
           <div>
-            <img src="./imgs/page2_img3.png" alt="">
-            <img src="./imgs/page2_img4.png" alt="">
+            <img src="./recovery/imgs/10.jpg" alt="">
+            <img src="./recovery/imgs/12.jpg" alt="">
+            <!-- <img src="./recovery/imgs/page2_img3.png" alt="">
+            <img src="./recovery/imgs/page2_img4.png" alt=""> -->
           </div>
         </div>
       </div>
 
       <div id="connectUs">
         <p class="title">联系我们</p>
-        <div><img src="./imgs/page3_icon_email.png"><span>邮箱：shaobin@yuanjigou.com</span></div>
-        <div><img src="./imgs/page3_icon_call.png"><span>客服电话：18616522095</span></div>
+        <div><img src="./recovery/imgs/page3_icon_call.png"><span>上门回收电话李师傅：<a href="tel:13522646842">135-2264-6842</a></span></div>
+        <div><img src="./recovery/imgs/page3_icon_email.png"><span>邮箱：<a href="mailto:1819690532@qq.com">1819690532@qq.com</a></span></div>
       </div>
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div>
         <a target="blank" href="https://policy.droigroup.com/protocols/yuanJiGou/app_privilege.html">《权限说明》</a>
         <a target="blank" href="https://policy.droigroup.com/protocols/yuanJiGou/user_agreement.html">《用户协议》</a>
@@ -76,24 +103,33 @@
         <a target="blank" href="https://www.shdf.gov.cn/shdf/channels/740.html">扫黄打非专区</a>
       </div>
       <div style="color:#666">
- <!-- <p>应用名称：源机购&nbsp&nbsp&nbsp&nbsp应用版本号：2.2.1&nbsp&nbsp&nbsp&nbsp开发者：上海卓悠网络科技有限公司</p> -->
  <p>应用名称：源机购&nbsp&nbsp&nbsp&nbsp开发者：源机购科技（上海）有限公司</p>
       </div>
       <div>
         <a target="blank" href="https://policy.droigroup.com/protocols/yuanJiGou/qualification.html">营业执照</a>
         <a target="blank" href="https://policy.droigroup.com/protocols/yuanJiGou/qualification.html">增值电信业务经营许可证</a>
-        <!-- <a target="blank" href="">网络文化经营许可证</a> -->
       </div>
       <div class="copyright">
         <span>Copyright ©2023 源机购科技（上海）有限公司 All Rights Reserved</span>
         <a href="https://beian.miit.gov.cn/#/Integrated/index" target="blank">ICP备案号沪ICP备2023007692号-1</a>
-        <!-- <a target="blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011502009094">沪公安网备31011502009094号</a> -->
       </div>
-    </footer>
+    </footer> -->
   </section>
   <script type="text/javascript">
+    function handleUpdateStyle(showMore,expand){
+      var traget=document.getElementById(showMore);
+      var expand=document.getElementById(expand);
+      if(traget.style.display=="none"){
+        traget.style.display="";
+        expand.style.display="none";
+        }else{
+        traget.style.display="none";
+        expand.style.display="";
+
+      }
+    }
   function  downApp(){
-      window.open("https://newmarket4.tt286.com:443/droimarketapk/apk/2022/08/06/4f7c53858f8809848e05ec9921e3b003.apk");
+      // window.open("https://newmarket4.tt286.com:443/droimarketapk/apk/2022/08/06/4f7c53858f8809848e05ec9921e3b003.apk");
     }
   </script>
 </body>
