修改网站信息

--- a/recovery.html
+++ b/recovery.html
@@ -14,9 +14,10 @@
   <section class="box">
     <div class="banner">
       <div class="left">
-        <div class="logoArea">
+        <div class="logoArea"  style="font-size: 25px;">
           <!-- <img class="imgH100" src="./recovery/imgs/logo.png" alt=""> -->
-          <img class="imgW100" src="./recovery/imgs/14.png" alt="">
+          <!-- <img style="width:100%" src="./recovery/imgs/14.png" alt=""> -->
+          <span class="fz7">废品回收</span>
         </div>
         <div class="intr">
           <div class="desc">
